--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,16 @@
-# Dependencies
-/node_modules
+# dependencies
+node_modules/
 
-# Production
-/build
+# docusaurus build output
+build/
+.docusaurus/
 
-# Generated files
-.docusaurus
-.cache-loader
-
-# Misc
+# OS / editor noise
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.idea/
+.vscode/
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
