Examples: ingest PDF pages 3–34 into docs/examples.mdx via script; add pdfjs-dist and runnable ESM importer

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "@docusaurus/core": "^3.9.2",
     "@docusaurus/preset-classic": "^3.9.2",
     "csv-parser": "^3.2.0"
+  },
+  "devDependencies": {
+    "pdfjs-dist": "^5.4.449"
   }
 }
